--- a/styles.css
+++ b/styles.css
@@ -168,13 +168,13 @@ body {
 /* fundo da barra de metas */
 
 .progress-bar-bg {
-    background-image: linear-gradient(23deg, #1F2A7F, #095f1b);
-    background-color: var(--border-color);
+  background-color: #48C337;
+    background-color: #222A3F;
 }
 
 #progress-bar-fill {
-    background-image: linear-gradient(to right, #27ae60, #2ecc71);
-    box-shadow: 0 0 10px rgba(46, 204, 113, 0.7);
+  background-color: rgb(22, 110, 14);
+    box-shadow: 0 0 10px #288503;
     transition: width 0.5s ease-out;
 }
 
