--- a/styles.css
+++ b/styles.css
@@ -155,7 +155,7 @@ body {
 /* TOQUE MOBILE (Chrome Mobile) */
 .tab-button.active:active::after {
     width: 70%;
-    
+
 }
 
 /* clique suave */
@@ -168,12 +168,12 @@ body {
 /* fundo da barra de metas */
 
 .progress-bar-bg {
-  background-color: #48C337;
+    background-color: #48C337;
     background-color: #222A3F;
 }
 
 #progress-bar-fill {
-  background-color: rgb(22, 110, 14);
+    background-color: rgb(22, 110, 14);
     box-shadow: 0 0 10px #288503;
     transition: width 0.5s ease-out;
 }
@@ -228,7 +228,7 @@ body {
 .version-sample .version-text {
     font-size: 0.9rem;
     font-weight: 600;
-    color: #8b5cf6;
+    color: #cccbcb;
     margin: 0;
     white-space: nowrap;
 }
@@ -319,7 +319,8 @@ body {
     width: 90%;
     max-width: 420px;
     padding: 25px;
-    background-image: linear-gradient(158deg, #ffffff49, #1f2a7fa1 40% 68%, #ffffff49);
+    background-color: #1f2a7fa1;
+    
     /* sólido (100% compatível) */
     border-radius: 14px;
     box-shadow: 0 12px 35px rgba(0, 0, 0, 0.25);
@@ -347,7 +348,7 @@ body {
     border: none;
     font-size: 22px;
     cursor: pointer;
-    color: #000000;
+    color: #270b8a;
 
 }
 
@@ -361,7 +362,7 @@ abbr {
     position: relative;
     cursor: help;
     font-weight: 600;
-    color: #7f1f5a;
+    color: #1F2A7F;
     transition: .3s;
 
 }
@@ -384,7 +385,7 @@ abbr:hover::after {
     bottom: 130%;
     left: 50%;
     transform: translateX(-50%);
-    background: #7f1f44;
+    background: #1F2A7F;
     color: #fff;
     padding: 8px 12px;
     border-radius: 6px;
@@ -858,7 +859,7 @@ input::placeholder {
     gap: 12px;
     width: 100%;
     padding: 10px 0;
-    
+
 }
 
 /* ---------------------------
@@ -908,7 +909,7 @@ input::placeholder {
     opacity: 1;
     transform: translateY(-1px);
     box-shadow: 0 0 10px #238636;
-    
+
 }
 
 /* ---------------------------
