--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
    PALETA DE CORES E VARIÁVEIS GERAIS
    ===================================================================== */
 :root {
-    --bg-principal: #0d1117;
+    --bg-principal-preto:#0d1117;
     --card-bg: #1f2428;
     --header-bg: #161b22;
     --border-color: #30363d;
@@ -26,7 +26,7 @@
    ESTILOS GERAIS DO BODY E CONTAINERS
    ===================================================================== */
 body {
-    background-color: var(--bg-principal);
+    background-color: #000000;
     color: var(--text-light);
     font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
         "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
@@ -35,7 +35,7 @@ body {
 
 /* fundo do sistema */
 .container-bg {
-    background-color: rgba(22, 27, 34, 0.95);
+    background-color: #000000;
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
 
@@ -970,7 +970,10 @@ input::placeholder {
     position: absolute;
     left: 8px;
     bottom: 1px;
-    font-size: 12px;                       /* funciona em todos */
-    line-height: 1.2;                      /* evita corte do texto */
-    font-family: Arial, Helvetica, sans-serif; /* universal */
+    font-size: 12px;
+    /* funciona em todos */
+    line-height: 1.2;
+    /* evita corte do texto */
+    font-family: Arial, Helvetica, sans-serif;
+    /* universal */
 }
