--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
    PALETA DE CORES E VARIÁVEIS GERAIS
    ===================================================================== */
 :root {
-    --bg-principal-preto:#0d1117;
+    --bg-principal-preto: #0d1117;
     --card-bg: #1f2428;
     --header-bg: #161b22;
     --border-color: #30363d;
@@ -10,7 +10,7 @@
 
     /* Cores principais */
     --green-primary: #238636;
-    --verde-principal: #48C337;  
+    --verde-principal: #48C337;
     --azul-tab: #1F2A7F;
 
     /* Calculadora */
@@ -30,7 +30,7 @@ body {
     color: var(--text-light);
     font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
         "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
-  
+
 }
 
 /* fundo do sistema */
@@ -393,7 +393,7 @@ abbr:hover::after {
     bottom: 130%;
     left: 50%;
     transform: translateX(-50%);
-    background:var(--verde-principal);
+    background: var(--verde-principal);
     color: #fff;
     padding: 8px 12px;
     border-radius: 6px;
@@ -450,10 +450,12 @@ Sem descrição	Editar Excluir */
 #deposit-date {
     color: #ffffff;
     text-align: center;
-    
+
 }
+
 .custom-input::-webkit-calendar-picker-indicator {
-    filter: invert(1); /* deixa branco no modo escuro */
+    filter: invert(1);
+    /* deixa branco no modo escuro */
     opacity: 0.7;
     cursor: pointer;
 }
@@ -669,6 +671,8 @@ select {
 }
 
 /* FOCUS */
+
+
 input:focus,
 textarea:focus,
 select:focus {
@@ -862,7 +866,6 @@ input::placeholder {
     font-size: 14px;
     color: #8b949e;
 }
-
 
 /* button de div minha meta meus deposito calculadora */
 /* ---------------------------
